Change body to JSON